--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri" rel="stylesheet">
 
-  <script src="./scripts/script.js"></script>
+  <script src="./scripts/main.js"></script>
   <script src="./scripts/media-queries-ie/respond.js"></script>
   <title>Gallery</title>
 </head>
@@ -30,13 +30,10 @@
         <ul class="inline-menu dark">
           <li>Home</li>
 
-          <input type="checkbox" unchecked id="br-1" />
           <li class="dropdown">
-            <label for="br-1">
               <div class="sub-menu-contariner">Browse <img class="arrow-icon" src="./icons/arrows/sub-menu/white-down-arrow.svg"
                   alt="Show sub menu">
               </div>
-            </label>
             <ul class="dropdown-menu">
               <li class="sub-menu-wrapper">Popular
                 <ul class="sub-menu light">
@@ -58,28 +55,21 @@
             Upload
           </li>
 
-          <input type="checkbox" unchecked id="em-1" />
           <li class="dropdown">
-            <label for="em-1">
               <img class="more-icon" src="./icons/menu/more.svg" alt="more">
-            </label>
 
             <ul class="dark main-menu-list sub-menu-click">
               <li>Login</li>
               <li>Sign Up</li>
               <li>Home</li>
 
-              <input type="checkbox" unchecked id="em-2" />
               <li class="sub-menu-wrapper">
-                <label for="em-2">
                   Browse <img class="arrow-icon" src="./icons/arrows/sub-menu/white-down-arrow.svg" alt="Show sub menu">
-                </label>
                 <ul class="sub-menu light sub-menu-click">
 
-                  <input type="checkbox" unchecked id="em-3" />
                   <li class="sub-menu-wrapper">
-                    <label for="em-3">Popular <img class="arrow-icon" src="./icons/arrows/sub-menu/black-down-arrow.svg"
-                        alt="Show sub menu"></label>
+                  <div>Popular <img class="arrow-icon" src="./icons/arrows/sub-menu/black-down-arrow.svg"
+                        alt="Show sub menu"></div>
 
                     <ul class="sub-menu dark sub-menu-click">
                       <li>Popular</li>
@@ -103,28 +93,22 @@
         </ul>
         <ul class="burger">
 
-          <input type="checkbox" unchecked id="burger-1" />
           <li class="dropdown">
-            <label for="burger-1">
               <img class="burger-icon" src="./icons/menu/menu.svg" alt="menu">
-            </label>
 
             <ul class="dark main-menu-list sub-menu-click">
               <li>Login</li>
               <li>Sign Up</li>
               <li>Home</li>
 
-              <input type="checkbox" unchecked id="burger-2" />
               <li class="sub-menu-wrapper">
-                <label for="burger-2">
-                  Browse <img class="arrow-icon" src="./icons/arrows/sub-menu/white-down-arrow.svg" alt="Show sub menu">
-                </label>
+                <div>Browse <img class="arrow-icon" src="./icons/arrows/sub-menu/white-down-arrow.svg" alt="Show sub menu"></div>
+               
                 <ul class="sub-menu light sub-menu-click">
 
-                  <input type="checkbox" unchecked id="burger-3" />
                   <li class="sub-menu-wrapper">
-                    <label for="burger-3">Popular <img class="arrow-icon" src="./icons/arrows/sub-menu/black-down-arrow.svg"
-                        alt="Show sub menu"></label>
+                    <div>Popular <img class="arrow-icon" src="./icons/arrows/sub-menu/black-down-arrow.svg"
+                        alt="Show sub menu"></div>
 
                     <ul class="sub-menu dark sub-menu-click">
                       <li>Popular</li>
@@ -341,8 +325,24 @@
     </div>
     <div class="pagination-wrapper">
       <div class="pagination">
-        <button><img src="./icons/arrows/left-arrow.svg" alt="previous"></button> 1 2 3 4 5 6 7 8 9 <button><img src="./icons/arrows/right-arrow.svg"
-            alt="next"></button>
+        <button><img src="./icons/arrows/first.svg" alt="first"></button>
+        <button><img src="./icons/arrows/left-arrow.svg" alt="previous"></button> 
+        <!--button class="page-number">1</button>
+        <button class="page-number">2</button>
+        <button class="page-number">3</button>
+        <button class="page-number">4</button>
+        <button class="page-number current-page">5</button>
+        <button class="page-number">6</button>
+        <button class="page-number">7</button>
+        <button class="page-number">8</button>
+        <button class="page-number">9</button-->
+          <button class="page-number">1</button>
+        <button class="page-number">2</button>
+        <button class="page-number current-page">3</button>
+        <button class="page-number">4</button>
+        <button class="page-number">5</button>
+        <button><img src="./icons/arrows/right-arrow.svg" alt="next"></button>
+        <button><img src="./icons/arrows/last.svg" alt="last"></button>
       </div>
     </div>
   </article>
