created modal window css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
       <nav id="main-menu">
         <ul class="inline-menu dark">
           <li>Home</li>
-
           <li class="dropdown">
               <div class="sub-menu-contariner">Browse <img class="arrow-icon" src="./icons/arrows/sub-menu/white-down-arrow.svg"
                   alt="Show sub menu">
@@ -50,87 +49,65 @@
               </li>
             </ul>
           </li>
-
           <li>
             Upload
           </li>
-
           <li class="dropdown">
               <img class="more-icon" src="./icons/menu/more.svg" alt="more">
-
             <ul class="dark main-menu-list sub-menu-click">
               <li>Login</li>
               <li>Sign Up</li>
               <li>Home</li>
-
               <li class="sub-menu-wrapper">
                   Browse <img class="arrow-icon" src="./icons/arrows/sub-menu/white-down-arrow.svg" alt="Show sub menu">
                 <ul class="sub-menu light sub-menu-click">
-
                   <li class="sub-menu-wrapper">
                   <div>Popular <img class="arrow-icon" src="./icons/arrows/sub-menu/black-down-arrow.svg"
                         alt="Show sub menu"></div>
-
                     <ul class="sub-menu dark sub-menu-click">
                       <li>Popular</li>
                       <li>New</li>
                       <li>Most shared</li>
                     </ul>
-
                   </li>
                   <li>New</li>
                   <li>Most shared</li>
                 </ul>
-
               </li>
-
               <li>Upload</li>
               <li>About Us</li>
             </ul>
-
           </li>
-
         </ul>
         <ul class="burger">
-
           <li class="dropdown">
               <img class="burger-icon" src="./icons/menu/menu.svg" alt="menu">
-
             <ul class="dark main-menu-list sub-menu-click">
               <li>Login</li>
               <li>Sign Up</li>
               <li>Home</li>
-
               <li class="sub-menu-wrapper">
-                <div>Browse <img class="arrow-icon" src="./icons/arrows/sub-menu/white-down-arrow.svg" alt="Show sub menu"></div>
-               
+                <div>Browse <img class="arrow-icon" src="./icons/arrows/sub-menu/white-down-arrow.svg" alt="Show sub menu"></div>  
                 <ul class="sub-menu light sub-menu-click">
-
                   <li class="sub-menu-wrapper">
                     <div>Popular <img class="arrow-icon" src="./icons/arrows/sub-menu/black-down-arrow.svg"
                         alt="Show sub menu"></div>
-
                     <ul class="sub-menu dark sub-menu-click">
                       <li>Popular</li>
                       <li>New</li>
                       <li>Most shared</li>
                     </ul>
-
                   </li>
                   <li>New</li>
                   <li>Most shared</li>
                 </ul>
-
               </li>
-
               <li>Upload</li>
               <li>About Us</li>
             </ul>
-
           </li>
         </ul>
       </nav>
-
     </div>
   </header>
 
@@ -322,6 +299,58 @@
           <div class="share"><img class="share-icon" src="./icons/social/share/white-share.svg" alt="share"></div>
         </div>
       </article>
+
+      <!-- <article class="modal-wrapper">
+        <div class="modal-window">
+          <header>
+            <div class="user-wrapper">
+              <div class="user">
+                <div class="user-image">
+                </div>
+                <div class="user-name">Till Lindemann</div>
+              </div>
+            </div>
+            <div class="close"><img src="./icons/modal/close.svg" alt=""></div>
+          </header>
+          <div class="modal-content">
+            <div class="content-wrapper">
+              <div class="content-image">
+                <img src="./images/header/kaidi-guo.jpg" alt=""/>
+              </div>
+              <div class="social-wrapper">
+                <div class="like-wrapper">
+                  <div class="like"><img src="./icons/social/like/like.svg" alt=""></div>
+                  <div class="number">123</div>
+                </div>
+                <div class="share-button share">
+                  <div>
+                    <img src="./icons/social/share/black-share.svg" alt="share">
+                    <div>share</div>
+                  </div>
+                </div>
+                <div class="share-button download">
+                  <div>
+                    <img src="./icons/modal/download-arrow.svg" alt="download">
+                    <div>download</div>
+                  </div>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <div class="tag-wrapper">
+                  <h2>Tags</h2>
+                  <div class="tag-list">
+                    <div class="tag">mountains</div>
+                    <div class="tag">nature</div>
+                    <div class="tag">snow</div>
+                    <div class="tag">sunset</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article> -->
+
     </div>
     <div class="pagination-wrapper">
       <div class="pagination">
