--- a/index.html
+++ b/index.html
@@ -4,26 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
-      integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Dancing+Script"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="./styles/style.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Hind+Siliguri"
-      rel="stylesheet"
-    />
-
     <script src="./scripts/media-queries-ie/respond.js"></script>
     <title>Gallery</title>
   </head>
@@ -572,9 +553,51 @@
         </div>
       </div>
     </article>
-   
 
-   <!--  <header id="about-us">
+    <footer>
+      <div class="footer-wrapper">
+        <div class="social-buttons">
+          <a href="#"
+            ><img
+              src="./icons/social/social-networks/telegram.svg"
+              alt="telegrem"
+          /></a>
+          <a href="#"
+            ><img src="./icons/social/social-networks/twitter.svg" alt="twitter"
+          /></a>
+          <a href="#"
+            ><img src="./icons/social/social-networks/reddit.svg" alt="reddit"
+          /></a>
+          <a href="#"
+            ><img
+              src="./icons/social/social-networks/instagram.svg"
+              alt="instagram"
+          /></a>
+        </div>
+        <div class="rights">Gallery © 2018</div>
+      </div>
+      <div>
+        Icons made by
+        <a href="http://www.freepik.com" title="Freepik">Freepik</a> from
+        <a href="https://www.flaticon.com/" title="Flaticon"
+          >www.flaticon.com</a
+        >
+        is licensed by
+        <a
+          href="http://creativecommons.org/licenses/by/3.0/"
+          title="Creative Commons BY 3.0"
+          target="_blank"
+          >CC 3.0 BY</a
+        >
+      </div>
+    </footer>
+  </body>
+  <script src="./scripts/modal-window/script.js"></script>
+  <script src="./scripts/menu/script.js"></script>
+  <script src="./scripts/main.js"></script>
+</html>
+
+<!--  <header id="about-us">
       <div class="header-wrapper">
         <h2>Gallery</h2>
         <form action="">
@@ -756,44 +779,3 @@
         </article>
       </article>
     </article> -->
-
-    <footer>
-      <div class="footer-wrapper">
-        <div class="social-buttons">
-          <a href="#"
-            ><img
-              src="./icons/social/social-networks/telegram.svg"
-              alt="telegrem"
-          /></a>
-          <a href="#"
-            ><img src="./icons/social/social-networks/twitter.svg" alt="twitter"
-          /></a>
-          <a href="#"
-            ><img src="./icons/social/social-networks/reddit.svg" alt="reddit"
-          /></a>
-          <a href="#"
-            ><img
-              src="./icons/social/social-networks/instagram.svg"
-              alt="instagram"
-          /></a>
-        </div>
-        <div class="rights">Gallery © 2018</div>
-      </div>
-      <div>
-        Icons made by
-        <a href="http://www.freepik.com" title="Freepik">Freepik</a> from
-        <a href="https://www.flaticon.com/" title="Flaticon"
-          >www.flaticon.com</a
-        >
-        is licensed by
-        <a
-          href="http://creativecommons.org/licenses/by/3.0/"
-          title="Creative Commons BY 3.0"
-          target="_blank"
-          >CC 3.0 BY</a
-        >
-      </div>
-    </footer>
-  </body>
-  <script src="./scripts/main.js"></script>
-</html>
