--- a/index.html
+++ b/index.html
@@ -24,25 +24,36 @@
               /></button
           ></label>
         </form>
+
         <nav id="main-menu">
+
           <ul class="inline-menu dark">
+
             <li>Home</li>
-            <li class="dropdown">
-              <div class="sub-menu-contariner">
+            <li class="dropdown parent top-level-menu">
                 Browse
                 <img
                   class="arrow-icon"
                   src="./icons/arrows/sub-menu/white-down-arrow.svg"
                   alt="Show sub menu"
                 />
-              </div>
-              <ul class="dropdown-menu">
-                <li class="sub-menu-wrapper">
+              <ul class="dropdown-menu sub-menu-click">
+                <li class="dropdown sub-menu-wrapper parent">
                   Popular
-                  <ul class="sub-menu light">
-                    <li class="sub-menu-wrapper">
+                  <img
+                    class="arrow-icon"
+                    src="./icons/arrows/sub-menu/white-down-arrow.svg"
+                    alt="Show sub menu"
+                  />
+                  <ul class="sub-menu-click sub-menu light">
+                    <li class="sub-menu-wrapper parent">
                       Popular
-                      <ul class="sub-menu dark">
+                      <img
+                        class="arrow-icon"
+                        src="./icons/arrows/sub-menu/white-down-arrow.svg"
+                        alt="Show sub menu"
+                      />
+                      <ul class="sub-menu dark sub-menu-click">
                         <li>Popular</li>
                         <li>New</li>
                         <li>Most shared</li>
@@ -55,13 +66,13 @@
               </ul>
             </li>
             <li>Upload</li>
-            <li class="dropdown">
+            <li class="dropdown parent top-level-menu">
               <img class="more-icon" src="./icons/menu/more.svg" alt="more" />
               <ul class="dark main-menu-list sub-menu-click">
                 <li>Login</li>
                 <li>Sign Up</li>
                 <li>Home</li>
-                <li class="sub-menu-wrapper">
+                <li class="sub-menu-wrapper parent">
                   Browse
                   <img
                     class="arrow-icon"
@@ -69,15 +80,13 @@
                     alt="Show sub menu"
                   />
                   <ul class="sub-menu light sub-menu-click">
-                    <li class="sub-menu-wrapper">
-                      <div>
+                    <li class="sub-menu-wrapper parent">
                         Popular
                         <img
                           class="arrow-icon"
                           src="./icons/arrows/sub-menu/black-down-arrow.svg"
                           alt="Show sub menu"
                         />
-                      </div>
 
                       <ul class="sub-menu dark sub-menu-click">
                         <li>Popular</li>
@@ -93,6 +102,7 @@
                 <li>About Us</li>
               </ul>
             </li>
+
           </ul>
           <ul class="burger">
             <li class="dropdown">
@@ -102,24 +112,20 @@
                 <li>Sign Up</li>
                 <li>Home</li>
                 <li class="sub-menu-wrapper">
-                  <div>
                     Browse
                     <img
                       class="arrow-icon"
                       src="./icons/arrows/sub-menu/white-down-arrow.svg"
                       alt="Show sub menu"
                     />
-                  </div>
                   <ul class="sub-menu light sub-menu-click">
                     <li class="sub-menu-wrapper">
-                      <div>
                         Popular
                         <img
                           class="arrow-icon"
                           src="./icons/arrows/sub-menu/black-down-arrow.svg"
                           alt="Show sub menu"
                         />
-                      </div>
 
                       <ul class="sub-menu dark sub-menu-click">
                         <li>Popular</li>
