pagination script has been written func-constructors replaced by classes

--- a/index.html
+++ b/index.html
@@ -542,20 +542,8 @@
       </div>
 
       <div class="pagination-wrapper">
-        <div class="pagination">
-          <button><img src="./icons/arrows/first.svg" alt="first" /></button>
-          <button>
-            <img src="./icons/arrows/left-arrow.svg" alt="previous" />
-          </button>
-          <button class="page-number">1</button>
-          <button class="page-number">2</button>
-          <button class="page-number current-page">3</button>
-          <button class="page-number">4</button>
-          <button class="page-number">5</button>
-          <button>
-            <img src="./icons/arrows/right-arrow.svg" alt="next" />
-          </button>
-          <button><img src="./icons/arrows/last.svg" alt="last" /></button>
+        <div class="pagination" id="pg-target-gen">
+
         </div>
       </div>
     </article>
@@ -598,11 +586,13 @@
       </div>
     </footer>
   </body>
+  <script src="./scripts/event-action/script.js"></script>
   <script src="./scripts/display/script.js"></script>
+  <script src="./scripts/dom-generator/script.js"></script>
   <script src="./scripts/menu/script.js"></script>
   <script src="./scripts/modal-window/script.js"></script>
-  <script src="./scripts/menu/script.js"></script>
-  <script src="./scripts/event-action/script.js"></script>
+  <script src="./scripts/paginatoin/posts/script.js"></script>
+  <script src="./scripts/paginatoin/script.js"></script>
   <script src="./scripts/main.js"></script>
 </html>
 
