added some changes. already fixed script of inline-menu

--- a/index.html
+++ b/index.html
@@ -588,6 +588,7 @@
   <script src="./scripts/menu/script.js"></script>
   <script src="./scripts/paginatoin/posts/script.js"></script>
   <script src="./scripts/paginatoin/pagination-generator/script.js"></script>
+  <script src="./scripts/paginatoin/sort/script.js"></script>
   <script src="./scripts/modal-window/modal-window-generator/script.js"></script>
   <script src="./scripts/modal-window/script.js"></script>
   <script src="./scripts/paginatoin/script.js"></script>
