basic sort complited

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <article role="main">
       <article id="page_browse">
         <header>
-          <nav id="bredcrums">
+          <nav class="breadcrumbs">
             <button class="empty-button"><h1>Browse</h1></button
             ><img
               class="right-arrow"
@@ -186,7 +186,7 @@
       </article>
       <article id="page_about-us">
         <header>
-          <nav id="bredcrums">
+          <nav class="breadcrumbs">
             <button class="empty-button"><h1>Home</h1></button
             ><img
               class="right-arrow"
@@ -429,7 +429,7 @@
 
   <article role="main" class="about-us">
     <header>
-      <nav id="bredcrums">
+      <nav id="breadcrumbs">
         <button class="empty-button"><h1>Home</h1></button
         ><img
           class="right-arrow"
