bugs has been fixed

--- a/index.html
+++ b/index.html
@@ -36,33 +36,6 @@
               />
               <ul id="tm:1-sub:0" class="dropdown-menu sub-menu-click">
                 <li class="select:browse">Pictures</li>
-                <!--
-                  <li class="dropdown sub-menu-wrapper parent">
-                    Popular
-                    <img
-                      class="arrow-icon"
-                      src="./icons/arrows/sub-menu/white-down-arrow.svg"
-                      alt="Show sub menu"
-                    />
-                    <ul id="tm:1-sub:1" class="sub-menu-click sub-menu light">
-                      <li class="sub-menu-wrapper parent">
-                        Popular1
-                        <img
-                          class="arrow-icon"
-                          src="./icons/arrows/sub-menu/black-down-arrow.svg"
-                          alt="Show sub menu"
-                        />
-                        <ul id="tm:1-sub:2" class="sub-menu dark sub-menu-click">
-                          <li>Popular</li>
-                          <li>New</li>
-                          <li>Most shared</li>
-                        </ul>
-                      </li>
-                      <li>New</li>
-                      <li>Most shared</li>
-                    </ul>
-                  </li>
-                -->
               </ul>
             </li>
             <li id="tm:2" class="vertical-line">Upload</li>
@@ -144,16 +117,7 @@
           </ul>
         </nav>
       </div>
-      <div id="video-target-gen">
-        <!--
-          <video autoplay controls muted loop>
-            <source
-              src="./video/WorkSpace-FreeHDStockFootage(NoCopyright)----Business,Technology,OfficeMeeting.mp4"
-              type="video/mp4"
-            />
-          </video>
-        -->
-      </div>
+      <div id="video-target-gen"></div>
     </header>
 
     <article role="main">
@@ -277,201 +241,16 @@
   <script src="./scripts/event-action/script.js"></script>
   <script src="./scripts/display/script.js"></script>
   <script src="./scripts/dom-generator/script.js"></script>
+  <script src="./scripts/page-selector/page-selector-generator/script.js"></script>
   <script src="./scripts/page-selector/script.js"></script>
+  <script src="./scripts/breadcrumbs/script.js"></script>
   <script src="./scripts/menu/script.js"></script>
   <script src="./scripts/paginatoin/posts/script.js"></script>
   <script src="./scripts/paginatoin/pagination-generator/script.js"></script>
+  <script src="./scripts/paginatoin/sort/radio/script.js"></script>
   <script src="./scripts/paginatoin/sort/script.js"></script>
   <script src="./scripts/modal-window/modal-window-generator/script.js"></script>
   <script src="./scripts/modal-window/script.js"></script>
   <script src="./scripts/paginatoin/script.js"></script>
   <script src="./scripts/main.js"></script>
 </html>
-
-<!--
-  <header id="about-us">
-    <div class="header-wrapper">
-      <h2>Gallery</h2>
-      <form action="">
-        <input type="text" name="text" placeholder="Search" id="search" />
-        <label for="search"
-          ><button>
-            <img
-              class="search-icon"
-              src="./icons/search/search.svg"
-              alt="search"
-            /></button
-        ></label>
-      </form>
-      <nav id="main-menu">
-        <ul class="inline-menu dark">
-          <li>Home</li>
-          <li class="dropdown">
-            <div class="sub-menu-contariner">
-              Browse
-              <img
-                class="arrow-icon"
-                src="./icons/arrows/sub-menu/white-down-arrow.svg"
-                alt="Show sub menu"
-              />
-            </div>
-            <ul class="dropdown-menu">
-              <li class="sub-menu-wrapper">
-                Popular
-                <ul class="sub-menu light">
-                  <li class="sub-menu-wrapper">
-                    Popular
-                    <ul class="sub-menu dark">
-                      <li>Popular</li>
-                      <li>New</li>
-                      <li>Most shared</li>
-                    </ul>
-                  </li>
-                  <li>New</li>
-                  <li>Most shared</li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-          <li>Upload</li>
-          <li class="dropdown">
-            <img class="more-icon" src="./icons/menu/more.svg" alt="more" />
-            <ul class="dark main-menu-list sub-menu-click">
-              <li>Login</li>
-              <li>Sign Up</li>
-              <li>Home</li>
-              <li class="sub-menu-wrapper">
-                Browse
-                <img
-                  class="arrow-icon"
-                  src="./icons/arrows/sub-menu/white-down-arrow.svg"
-                  alt="Show sub menu"
-                />
-                <ul class="sub-menu light sub-menu-click">
-                  <li class="sub-menu-wrapper">
-                    <div>
-                      Popular
-                      <img
-                        class="arrow-icon"
-                        src="./icons/arrows/sub-menu/black-down-arrow.svg"
-                        alt="Show sub menu"
-                      />
-                    </div>
-
-                    <ul class="sub-menu dark sub-menu-click">
-                      <li>Popular</li>
-                      <li>New</li>
-                      <li>Most shared</li>
-                    </ul>
-                  </li>
-                  <li>New</li>
-                  <li>Most shared</li>
-                </ul>
-              </li>
-              <li>Upload</li>
-              <li>About Us</li>
-            </ul>
-          </li>
-        </ul>
-        <ul class="burger">
-          <li class="dropdown">
-            <img class="burger-icon" src="./icons/menu/menu.svg" alt="menu" />
-            <ul class="dark main-menu-list sub-menu-click">
-              <li>Login</li>
-              <li>Sign Up</li>
-              <li>Home</li>
-              <li class="sub-menu-wrapper">
-                <div>
-                  Browse
-                  <img
-                    class="arrow-icon"
-                    src="./icons/arrows/sub-menu/white-down-arrow.svg"
-                    alt="Show sub menu"
-                  />
-                </div>
-                <ul class="sub-menu light sub-menu-click">
-                  <li class="sub-menu-wrapper">
-                    <div>
-                      Popular
-                      <img
-                        class="arrow-icon"
-                        src="./icons/arrows/sub-menu/black-down-arrow.svg"
-                        alt="Show sub menu"
-                      />
-                    </div>
-
-                    <ul class="sub-menu dark sub-menu-click">
-                      <li>Popular</li>
-                      <li>New</li>
-                      <li>Most shared</li>
-                    </ul>
-                  </li>
-                  <li>New</li>
-                  <li>Most shared</li>
-                </ul>
-              </li>
-              <li>Upload</li>
-              <li>About Us</li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
-    </div>
-
-    <video autoplay controls muted loop>
-      <source
-        src="./video/WorkSpace-FreeHDStockFootage(NoCopyright)----Business,Technology,OfficeMeeting.mp4"
-        type="video/mp4"
-      />
-    </video>
-
-  </header>
-
-  <article role="main" class="about-us">
-    <header>
-      <nav id="breadcrumbs">
-        <button class="empty-button"><h1>Home</h1></button
-        ><img
-          class="right-arrow"
-          src="./icons/arrows/right-arrow.svg"
-          alt=""
-        />
-        <h1>About Us</h1>
-      </nav>
-    </header>
-
-    <article class="block-wrapper">
-      <article class="block photo">
-        <img src="./images/blocks/annie-spratt-294450-unsplash.jpg" alt="" />
-      </article>
-      <article class="block text">
-        <h2>Hwo we are</h2>
-        <div>
-          Gallery has grown into an industry-leading photography community.
-          It’s become a source of inspiration for everyone from award-winning
-          writers like Deepak Chopra to industry-titans like Apple, and
-          millions of creators worldwide. <a href="">Read more...</a>
-        </div>
-      </article>
-    </article>
-    <article class="block-wrapper">
-      <article class="block photo">
-        <img src="./images/blocks/rawpixel-626044-unsplash.jpg" alt="" />
-      </article>
-      <article class="block text">
-        <h2>
-          Unsplash raises $8 million to build a new economy around
-          photography.
-        </h2>
-        <div>
-          The Gallery ecosystem is pushing the impact of photography further
-          than ever before. Our aim is to make photography a universally
-          accessible art form. The purpose of raising this investment is to
-          build a new type of economic future for photography when it is set
-          free. <a href="">Read more...</a>
-        </div>
-      </article>
-    </article>
-
-  </article>
--->
