--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                       <ul id="tm:3-sub:2" class="sub-menu dark sub-menu-click">
                         <li>Popular</li>
                         <li>New</li>
-                        <li>Most shared</li>
+                        <li class="select:qwerty">Most shared</li>
                       </ul>
                     </li>
                     <li>New</li>
@@ -123,7 +123,7 @@
     <article role="main">
       <article id="page_browse">
         <header>
-          <nav class="breadcrumbs">
+          <nav class="breadcrumbs" id="path-target-gen">
             <button class="empty-button"><h1>Browse</h1></button
             ><img
               class="right-arrow"
@@ -243,6 +243,7 @@
   <script src="./scripts/dom-generator/script.js"></script>
   <script src="./scripts/page-selector/page-selector-generator/script.js"></script>
   <script src="./scripts/page-selector/script.js"></script>
+  <script src="./scripts/breadcrumbs/breadcrumbs-generator/script.js"></script>
   <script src="./scripts/breadcrumbs/script.js"></script>
   <script src="./scripts/menu/script.js"></script>
   <script src="./scripts/paginatoin/posts/script.js"></script>
