meu bug fixing proccess

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 src="./icons/arrows/sub-menu/white-down-arrow.svg"
                 alt="Show sub menu"
               />
-              <ul id="tm:1-sub:0" class="dropdown-menu sub-menu-click">
+              <ul id="tm:1-sub:0" class="dark dropdown-menu sub-menu-click">
                 <li class="select:browse">Pictures</li>
               </ul>
             </li>
@@ -91,7 +91,7 @@
                     alt="Show sub menu"
                   />
 
-                  <ul id="tmb:1-sub:1" class="sub-menu light">
+                  <ul id="tmb:1-sub:1" class="sub-menu light sub-menu-click">
                     <li class="sub-menu-wrapper parent">
                       Popular
                       <img
@@ -103,7 +103,47 @@
                       <ul id="tmb:1-sub:2" class="sub-menu dark sub-menu-click">
                         <li>Popular</li>
                         <li>New</li>
-                        <li>Most shared</li>
+                        <li class="sub-menu-wrapper parent">
+                          Most shared
+                          <img
+                            class="arrow-icon"
+                            src="./icons/arrows/sub-menu/black-down-arrow.svg"
+                            alt="Show sub menu"
+                          />
+
+                          <ul
+                            id="tmb:1-sub:3"
+                            class="sub-menu dark sub-menu-click"
+                          >
+                            <li>Popular</li>
+                            <li>New</li>
+                            <li>Most shared</li>
+                          </ul>
+                        </li>
+                        <ul
+                          id="tmb:1-sub:1"
+                          class="sub-menu light sub-menu-click"
+                        >
+                          <li class="sub-menu-wrapper parent">
+                            Popular
+                            <img
+                              class="arrow-icon"
+                              src="./icons/arrows/sub-menu/black-down-arrow.svg"
+                              alt="Show sub menu"
+                            />
+
+                            <ul
+                              id="tmb:1-sub:2"
+                              class="sub-menu dark sub-menu-click"
+                            >
+                              <li>Popular</li>
+                              <li>New</li>
+                              <li>Most shared</li>
+                            </ul>
+                          </li>
+                          <li>New</li>
+                          <li>Most shared</li>
+                        </ul>
                       </ul>
                     </li>
                     <li>New</li>
