began work on slider

--- a/index.html
+++ b/index.html
@@ -186,20 +186,12 @@
           </nav>
         </header>
         <article class="block-wrapper slider">
-          <article class="block photo">
+          <article id="slide-target-gen" class="block photo">
+            <!-- auto slider with interval -->
             <img
-              class="left arrow"
-              src="./icons/arrows/left-arrow.svg"
-              alt="left"
-            />
-            <img class="slide"
+              class="slide"
               src="./images/blocks/annie-spratt-294450-unsplash.jpg"
               alt="slide"
-            />
-            <img
-              class="right arrow"
-              src="./icons/arrows/right-arrow.svg"
-              alt="right"
             />
           </article>
           <article class="block text">
@@ -213,7 +205,7 @@
               contributors in Timberland’s international campaign to create a
               glowing collective experience. Timberland will also be
               commissioning a selection of Unsplash contributors to shoot their
-              anniversary collection. <a href="">Read more...</a>
+              anniversary collection. <a href="">Read more here...</a>
             </div>
           </article>
         </article>
@@ -259,19 +251,31 @@
     </footer>
   </body>
   <script src="./scripts/event-action/script.js"></script>
+
   <script src="./scripts/display/script.js"></script>
+
   <script src="./scripts/dom-generator/script.js"></script>
+
+  <script src="./scripts/slider/slides/script.js"></script>
+  <script src="./scripts/slider/slider-generator/script.js"></script>
+  <script src="./scripts/slider/script.js"></script>
+
   <script src="./scripts/page-selector/page-selector-generator/script.js"></script>
   <script src="./scripts/page-selector/script.js"></script>
+
   <script src="./scripts/breadcrumbs/breadcrumbs-generator/script.js"></script>
   <script src="./scripts/breadcrumbs/script.js"></script>
+
   <script src="./scripts/menu/script.js"></script>
+
   <script src="./scripts/paginatoin/posts/script.js"></script>
   <script src="./scripts/paginatoin/pagination-generator/script.js"></script>
   <script src="./scripts/paginatoin/sort/radio/script.js"></script>
   <script src="./scripts/paginatoin/sort/script.js"></script>
+  <script src="./scripts/paginatoin/script.js"></script>
+
   <script src="./scripts/modal-window/modal-window-generator/script.js"></script>
   <script src="./scripts/modal-window/script.js"></script>
-  <script src="./scripts/paginatoin/script.js"></script>
+
   <script src="./scripts/main.js"></script>
 </html>
