slider has been made

--- a/index.html
+++ b/index.html
@@ -188,11 +188,14 @@
         <article class="block-wrapper slider">
           <article id="slide-target-gen" class="block photo">
             <!-- auto slider with interval -->
+
             <img
               class="slide"
-              src="./images/blocks/annie-spratt-294450-unsplash.jpg"
+              src="./images/slider/pexels-photo-1251861.jpeg"
               alt="slide"
             />
+
+            <div class="slide"></div>
           </article>
           <article class="block text">
             <h2>
